Initial commit: Set up portfolio structure and basic files

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nattasith - Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#home">Portfolio</a>
+                <a href="#home1">Portfolio</a>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -22,7 +25,11 @@
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <div class="nav-toggle">
+            <div class="language-switcher">
+                <button id="lang-en" class="active">EN</button>
+                <button id="lang-th">ไทย</button>
+            </div>
+            <div class="nav-toggle">    
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -52,7 +59,8 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I am a passionate Full Stack Developer with experience in creating web applications using modern technologies. I love solving complex problems and learning new technologies.</p>
+                    <p>I am a passionate Full Stack Developer with experience in creating web applications using modern
+                        technologies. I love solving complex problems and learning new technologies.</p>
                     <div class="about-stats">
                         <div class="stat-item">
                             <h3>2+</h3>
@@ -125,7 +133,8 @@
                         <h3>E-commerce Website</h3>
                         <p>A full-stack e-commerce solution built with React and Node.js</p>
                         <div class="project-links">
-                            <a href="#" class="btn btn-small">Live Demo</a>
+                            <a href="https://htmlpreview.github.io/?https://github.com/Nattasith0/mini-ecommerce-collaboration/blob/main/index.html"
+                                class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
                         </div>
                     </div>
@@ -136,7 +145,8 @@
                         <h3>Task Management App</h3>
                         <p>A collaborative task management application with real-time updates</p>
                         <div class="project-links">
-                            <a href="#" class="btn btn-small">Live Demo</a>
+                            <a href="https://www.pinterest.com/pin/2322237302249352/" class="btn btn-small">Live
+                                Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
                         </div>
                     </div>
@@ -147,7 +157,8 @@
                         <h3>Weather App</h3>
                         <p>A responsive weather application with location-based forecasts</p>
                         <div class="project-links">
-                            <a href="#" class="btn btn-small">Live Demo</a>
+                            <a href="https://www.pinterest.com/pin/93027548550076447/" class="btn btn-small">Live
+                                Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
                         </div>
                     </div>
@@ -209,4 +220,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
