Initial portfolio website structure

--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I am a passionate Full Stack Developer with experience in creating web applications using modern
-                        technologies. I love solving complex problems and learning new technologies.</p>
+                    <p>I am currently training to learn website and application development, which I am passionate about, using modern technologies. I love learning new technologies.</p>
                     <div class="about-stats">
                         <div class="stat-item">
-                            <h3>2+</h3>
+                            <h3>1+</h3>
                             <p>Years Experience</p>
                         </div>
                         <div class="stat-item">
-                            <h3>15+</h3>
+                            <h3>5+</h3>
                             <p>Projects Completed</p>
                         </div>
                         <div class="stat-item">
@@ -134,8 +133,8 @@
                         <p>A full-stack e-commerce solution built with React and Node.js</p>
                         <div class="project-links">
                             <a href="https://htmlpreview.github.io/?https://github.com/Nattasith0/mini-ecommerce-collaboration/blob/main/index.html"
-                                class="btn btn-small">Live Demo</a>
-                            <a href="#" class="btn btn-small btn-secondary">GitHub</a>
+                                class="btn btn-small1">Live Demo</a>
+                            <a href="https://github.com/Nattasith0/mini-ecommerce-collaboration" class="btn btn-small btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -147,7 +146,7 @@
                         <div class="project-links">
                             <a href="https://www.pinterest.com/pin/2322237302249352/" class="btn btn-small">Live
                                 Demo</a>
-                            <a href="#" class="btn btn-small btn-secondary">GitHub</a>
+                            <a href="https://github.com/Nattasith0" class="btn btn-small btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +158,7 @@
                         <div class="project-links">
                             <a href="https://www.pinterest.com/pin/93027548550076447/" class="btn btn-small">Live
                                 Demo</a>
-                            <a href="#" class="btn btn-small btn-secondary">GitHub</a>
+                            <a href="https://github.com/Nattasith0" class="btn btn-small btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -190,7 +189,7 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Nattasith0"><i class="fab fa-github"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
