--- a/index.html
+++ b/index.html
@@ -15,35 +15,33 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
-                <a href="#home1">Portfolio</a>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+            <div class="nav-logo"><a href="#Port">Portfolio</a></div>
+            <ul class="nav-menu" role="menubar" aria-label="Primary">
+                <li role="none"><a href="#home" class="nav-link" role="menuitem">Home</a></li>
+                <li role="none"><a href="#about" class="nav-link" role="menuitem">About</a></li>
+                <li role="none"><a href="#skills" class="nav-link" role="menuitem">Skills</a></li>
+                <li role="none"><a href="#projects" class="nav-link" role="menuitem">Projects</a></li>
+                <li role="none"><a href="#contact" class="nav-link" role="menuitem">Contact</a></li>
             </ul>
-            <div class="language-switcher">
-                <button id="lang-en" class="active">EN</button>
-                <button id="lang-th">ไทย</button>
+
+            <div class="language-switcher" role="group" aria-label="Language">
+                <button id="lang-en" class="active" aria-pressed="true">EN</button>
+                <button id="lang-th" aria-pressed="false">ไทย</button>
             </div>
-            <div class="nav-toggle">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
+
+            <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="menu">
+                <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+            </button>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero" id="home">
         <div class="hero-content">
             <div class="hero-image">
-                <img src="images/profile.jpg" alt="Profile Picture">
+                <img src="images/profile.jpg" alt="Portrait of Nattasith Manochai" loading="lazy">
             </div>
-            <h1>Hi, I'm <span>Nattasit Manochai</span></h1>
+            <h1>Hi, I'm <span>Nattasit M.</span></h1>
             <p class="typewriter">Front-End Developer | UI/UX Enthusiast | Learner</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary"><i class="fas fa-laptop-code"></i> View My Work</a>
@@ -56,73 +54,73 @@
     </section>
 
     <!-- About Section -->
-    <section class="about">
+    <section class="about" id="about">
         <h2>About Me</h2>
         <p>
-            I am passionate about building modern and responsive websites. 
+            I am passionate about building modern and responsive websites.
             I love combining creativity with functionality to create experiences that users enjoy.
         </p>
     </section>
 
     <!-- Skills Section -->
     <section id="skills" class="skills">
-    <div class="container">
-        <h2 class="section-title">My Skills</h2>
-        <div class="skills-marquee">
-            <div class="skills-track">
-                <div class="skill-card">
-                    <i class="fab fa-html5"></i>
-                    <p>HTML5</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-css3-alt"></i>
-                    <p>CSS3</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-js-square"></i>
-                    <p>JavaScript</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-react"></i>
-                    <p>React</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-node-js"></i>
-                    <p>Node.js</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-database"></i>
-                    <p>MongoDB</p>
-                </div>
-                <!-- ทำซ้ำอีกชุดเพื่อให้เลื่อนต่อเนื่อง -->
-                <div class="skill-card">
-                    <i class="fab fa-html5"></i>
-                    <p>HTML5</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-css3-alt"></i>
-                    <p>CSS3</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-js-square"></i>
-                    <p>JavaScript</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-react"></i>
-                    <p>React</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-node-js"></i>
-                    <p>Node.js</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-database"></i>
-                    <p>MongoDB</p>
+        <div class="container">
+            <h2 class="section-title">My Skills</h2>
+            <div class="skills-marquee">
+                <div class="skills-track">
+                    <div class="skill-card">
+                        <i class="fab fa-html5"></i>
+                        <p>HTML5</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-css3-alt"></i>
+                        <p>CSS3</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-js-square"></i>
+                        <p>JavaScript</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-react"></i>
+                        <p>React</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-node-js"></i>
+                        <p>Node.js</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-database"></i>
+                        <p>MongoDB</p>
+                    </div>
+                    <!-- ทำซ้ำอีกชุดเพื่อให้เลื่อนต่อเนื่อง -->
+                    <div class="skill-card">
+                        <i class="fab fa-html5"></i>
+                        <p>HTML5</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-css3-alt"></i>
+                        <p>CSS3</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-js-square"></i>
+                        <p>JavaScript</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-react"></i>
+                        <p>React</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fab fa-node-js"></i>
+                        <p>Node.js</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-database"></i>
+                        <p>MongoDB</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
     <!-- Projects Section -->
@@ -172,44 +170,71 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" data-reveal>
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
+
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Let's work together</h3>
                     <p>I'm always interested in hearing about new projects and opportunities.</p>
+
                     <div class="contact-details">
-                        <div class="contact-item">
+                        <a class="contact-item" href="mailto:Nattasith_ma67@live.ac.th">
                             <i class="fas fa-envelope"></i>
                             <span>Nattasith_ma67@live.ac.th</span>
-                        </div>
-                        <div class="contact-item">
+                        </a>
+                        <a class="contact-item" href="tel:+66123456789">
                             <i class="fas fa-phone"></i>
                             <span>+66 12 345 6789</span>
-                        </div>
+                        </a>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Chiang mai, Thailand</span>
+                            <span>Chiang Mai, Thailand</span>
                         </div>
                     </div>
+
                     <div class="social-links">
-                        <a href="https://github.com/Nattasith0"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/Nattasith0" target="_blank" rel="noopener noreferrer"
+                            aria-label="GitHub">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Twitter/X">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </div>
                 </div>
-                <form class="contact-form">
+
+                <form class="contact-form" id="contactForm" novalidate>
                     <div class="form-group">
-                        <input type="text" name="name" placeholder="Your Name" required>
+                        <label for="name" class="sr-only">Your Name</label>
+                        <input id="name" name="name" type="text" placeholder="Your Name" required autocomplete="name"
+                            minlength="2">
+                        <small class="error" aria-live="polite"></small>
                     </div>
+
                     <div class="form-group">
-                        <input type="email" name="email" placeholder="Your Email" required>
+                        <label for="email" class="sr-only">Your Email</label>
+                        <input id="email" name="email" type="email" placeholder="Your Email" required
+                            autocomplete="email" inputmode="email">
+                        <small class="error" aria-live="polite"></small>
                     </div>
+
                     <div class="form-group">
-                        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+                        <label for="message" class="sr-only">Your Message</label>
+                        <textarea id="message" name="message" placeholder="Your Message" rows="6" required
+                            minlength="10"></textarea>
+                        <small class="error" aria-live="polite"></small>
                     </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
+
+                    <button type="submit" class="btn btn-primary contact-submit">
+                        <i class="fas fa-paper-plane"></i> Send Message
+                    </button>
+
+                    <p class="form-status" role="status" aria-live="polite"></p>
                 </form>
             </div>
         </div>
